--- a/chains/invMass_prios_mpk/invMass_prios_mpk.tex
+++ b/chains/invMass_prios_mpk/invMass_prios_mpk.tex
@@ -1,8 +1,8 @@
 \begin{tabular}{|l|c|c|c|c|} 
  \hline 
 Param & best-fit & mean$\pm\sigma$ & 95\% lower & 95\% upper \\ \hline 
-$inv_{M wdm keV }$ &$0.0742$ & $0.1424_{nan}^{+nan}$ & $nan$ & $nan$ \\ 
-$log10sigmaovermass$ &$-5.009$ & $-5.357_{nan}^{+nan}$ & $nan$ & $nan$ \\ 
+$M_{wdm}^{-1}$ &$0.07872$ & $0.12_{-0.086}^{+0.023}$ & $nan$ & $nan$ \\ 
+$\log_{10}{\sigma / m}$ &$-5.14$ & $-5.518_{nan}^{+nan}$ & $nan$ & $nan$ \\ 
 \hline 
  \end{tabular} \\ 
-$-\ln{\cal L}_\mathrm{min} =18.2306$, minimum $\chi^2=36.46$ \\ 
+$-\ln{\cal L}_\mathrm{min} =15.6189$, minimum $\chi^2=31.24$ \\ 
